сделал работающую api

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,6 +19,6 @@
   <div id="forecast"></div>
 
   <!-- Подключение внешнего JavaScript-файла -->
-  <script src="script.js"></script>
+  <script src="static/script.js"></script>
 </body>
 </html>
